--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,11 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_maps">Map</string>
+
+
+    <string name="emergency">Emergency</string>
     <string name="open">Open</string>
     <string name="clean">Clean</string>
+    <string name="download">Download</string>
+    <string name="defaultBtn">Button</string>
 </resources>
