make the path and marker visible on map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,6 @@
     <string name="startFLP">StartFLP</string>
     <string name="pauseFLP">PauseFLP</string>
     <string name="stopFLP">StopFLP</string>
-    <string name="flatTrim">FlatTrim</string>
+    <string name="flatTrim">FlatTrimConfig</string>
 
 </resources>
