--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="disconnection">Disconnection ...</string>
     <string name="fetch">Fetching medias</string>
     <string name="emergency">Emergency</string>
+    <string name="ap">AP</string>
+    <string name="engageap">Engage AP</string>
+    <string name="disengageap">Disengage AP</string>
     <string name="open">Open</string>
     <string name="clean">Clean</string>
     <string name="download">Download</string>
