--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="pauseFLP">PauseFLP</string>
     <string name="stopFLP">StopFLP</string>
     <string name="flatTrim">FlatTrimConfig</string>
+    <string name="startMis">StartMis</string>
 
 </resources>
