--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="startFLP">StartFLP</string>
     <string name="pauseFLP">PauseFLP</string>
     <string name="stopFLP">StopFLP</string>
-    <string name="flatTrim">FlatTrimConfig</string>
+    <string name="flatTrim">Apply Config</string>
     <string name="startMis">StartMis</string>
     <string name="closer">Closer</string>
 
